--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "path": "^0.12.7",
-    "vue": "^3.3.4"
+    "pinia": "^2.1.7",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
